Fix 'Whitespace Below Header in Course Pages' - #38.

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -202,13 +202,13 @@ div.signuppanel h2 {
 }
 
 #header2 {
-    border-bottom: none solid [[setting:maincolor]];
-    clear: both;
-    margin-bottom: 0;
     background-color: transparent;
-    padding-top: 0;
-    min-height: [[setting:pageheaderheight]];
+    border-bottom: none;
+    clear: both;
     color: [[setting:headertextcolor2]];
+    margin-bottom: 0;
+    min-height: [[setting:pageheaderheight]];
+    padding-top: 0;
 }
 
 /* Override default boost max height for header2. */
